--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>hello coursera</title>
   </head>
   <body>
-    <h1>hello coursera </h1>
+    <h1>hello coursera. I am thrilled about this course!!</h1>
 
   </body>
 </html>
