--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>hello coursera</title>
+    <link rel="stylesheet" type="text/css" href="sample.css">
+    <script src="angular.min.js"></script>
+    <script src="ang.js"></script>
   </head>
-  <body>
-    <h1>hello coursera. I am thrilled about this course!!</h1>
+  <body ng-app="mymodule" ng-controller="mycontroller">
+<form>
+    <h1>
+  enter name <input type="text" ng-model="name" ng-keyup="calstringvalue();"><br><br>
+
+  <p>the value of {{name}} </p>
+</form>
 
   </body>
+
+
+
+  </script>
 </html>
